# phantom-alembic

./: README.md  pyproject.toml
src/phantom_alembic/: __init__.py  core.py  defaults.py  main.py
tests/: conftest.py  test_e2e.py  test_package.py
tests/fixtures/e2e/revision/: models.py
tests/fixtures/e2e/revision/reference/: alembic.ini
tests/fixtures/e2e/revision/sut/: sut.py  versions.jsonl
tests/fixtures/e2e/upgrade/: models.py
tests/fixtures/e2e/upgrade/reference/: test.db
tests/fixtures/e2e/upgrade/reference/migrations/versions/: 517ac74ab831_.py  e0f3b1da8144_.py
tests/fixtures/e2e/upgrade/sut/: sut.py  versions.jsonl
